--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ body {
               </div>
               
               <div class="banner">
-                <div class="banner-text">підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо! </div>
+                <div class="banner-text">підчасвоєнногостану.ОйулузічервонакалинапохилиласяНашуславнуУкраїнурозвеселимо!</div>
               </div>
               
               <div class="personal-info">
